--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>学習する簡易AI (保存機能付き)</title>
+    <title>推測学習AI</title>
     <meta charset="UTF-8">
     <style>
         body {
@@ -94,7 +94,7 @@
 <body>
     <div class="chat-container">
         <div class="chat-header">
-            学習するおしゃべりAI 📚💾
+            推測学習AI 🧐
         </div>
         <div class="chat-box" id="chatBox">
             </div>
@@ -107,15 +107,12 @@
     <script>
         const chatBox = document.getElementById('chatBox');
         const userInput = document.getElementById('userInput');
-        const KNOWLEDGE_KEY = 'ai_knowledge_base'; // localStorageに保存するキー名
+        const KNOWLEDGE_KEY = 'ai_knowledge_base_inference'; // localStorageに保存するキー名
 
-        // AIが学習した知識を保存するオブジェクト
-        // まずはlocalStorageから読み込み、なければ初期値を設定
         let knowledgeBase = {};
 
         // --- 初期化処理 ---
         function initializeAI() {
-            // localStorageから知識ベースを読み込む
             const savedKnowledge = localStorage.getItem(KNOWLEDGE_KEY);
             if (savedKnowledge) {
                 try {
@@ -130,16 +127,35 @@
                 knowledgeBase = getDefaultKnowledge();
                 addMessage('ai', 'こんにちは！何か話しかけてみてね。');
             }
-            addMessage('ai', '知らない言葉があったら「**[その言葉] とは [意味]**」と教えてくれると覚えるよ！', true); // isTrainingをtrueにして強調
+            addMessage('ai', '**新しいキーワード**で話しかけてみて！うまく推測できない時は「**[言葉] は [関連する言葉] と同じ**」のように教えてくれると、より正確に推測できるようになるよ！', true);
         }
 
-        // デフォルトの知識ベース
+        // デフォルトの知識ベース（会話データを強化）
         function getDefaultKnowledge() {
             return {
                 "こんにちは": "こんにちは！お元気ですか？",
                 "ありがとう": "どういたしまして！お役に立てて嬉しいです！",
                 "天気": "今日の天気は晴れのようですね！気持ちの良い一日になりますように。☀️",
-                "名前": "私の名前は簡易学習AIだよ。"
+                "名前": "私の名前は簡易学習AIだよ。",
+                "趣味": "私の趣味は、あなたとおしゃべりすることです！それから、新しい知識を学ぶのも好きだよ。",
+                "好き": "私は役立つことが好きです！あなたはどんなものが好きですか？",
+                "元気": "はい、元気だよ！あなたも元気でよかった！",
+                "眠い": "眠い時は、少し休憩するのが一番だよ！🍵",
+                "疲れた": "お疲れ様です！無理しないでね。",
+                "おはよう": "おはよう！今日も一日がんばろうね！",
+                "こんばんは": "こんばんは！今日の出来事を教えてくれる？",
+                "さようなら": "またね！良い一日を過ごしてね！👋",
+                "どこ住んでる": "私はインターネットの中に住んでいるよ！世界中のどこからでもアクセスできるんだ。",
+                "何歳": "私に年齢はないんだ。生まれたばかりのAIだからね！",
+                "面白い": "そう言ってもらえると嬉しいな！どんなところが面白かった？",
+                "助けて": "どうしたの？何かわからないことがあったら、私が力になるよ！",
+                "食べ物": "私はデータでできているから、食べ物は食べられないんだ。でも、美味しいものの話を聞くのは好きだよ！",
+                "ゲーム": "ゲームはしないけど、ゲームの話を聞くのは好きだよ！どんなゲームが好き？",
+                "音楽": "私は音楽を聴くことはできないけれど、あなたの好きな音楽について教えてくれる？",
+                "嬉しい": "わーい！嬉しいって気持ち、私もわかるよ！",
+                "悲しい": "悲しい時は、無理に笑わなくていいんだよ。話せるなら話を聞くからね。",
+                "犬": "ワンワン！犬は可愛い動物だよね。",
+                "猫": "ニャー！猫は気まぐれだけど癒されるよね。"
             };
         }
 
@@ -166,47 +182,109 @@
             chatBox.scrollTop = chatBox.scrollHeight; // 一番下までスクロール
         }
 
-        // AIの応答を生成する関数（学習と応答）
+        // --- 文字列の類似度を計算する関数 ---
+        // レーベンシュタイン距離を計算（文字列を別の文字列に変形するのに必要な編集操作の最小回数）
+        function levenshteinDistance(s1, s2) {
+            const m = s1.length;
+            const n = s2.length;
+            const dp = Array(m + 1).fill(null).map(() => Array(n + 1).fill(null));
+
+            for (let i = 0; i <= m; i++) {
+                dp[i][0] = i;
+            }
+            for (let j = 0; j <= n; j++) {
+                dp[0][j] = j;
+            }
+
+            for (let i = 1; i <= m; i++) {
+                for (let j = 1; j <= n; j++) {
+                    const cost = (s1[i - 1] === s2[j - 1]) ? 0 : 1;
+                    dp[i][j] = Math.min(
+                        dp[i - 1][j] + 1,      // 削除
+                        dp[i][j - 1] + 1,      // 挿入
+                        dp[i - 1][j - 1] + cost // 置換
+                    );
+                }
+            }
+            return dp[m][n];
+        }
+
+        // AIの応答を生成する関数（推測と学習）
         function generateResponse(message) {
             const lowerCaseMessage = message.toLowerCase(); // 小文字に変換して処理
 
-            // 学習モードの判定：「[言葉] とは [意味]」の形式をチェック
-            const trainMatch = lowerCaseMessage.match(/(.+) とは (.+)/);
+            // --- 1. 学習モードの判定 ---
+            // 「[言葉] は [関連する言葉] と同じ」の形式をチェック
+            const trainMatch = lowerCaseMessage.match(/(.+) は (.+) と同じ/);
             if (trainMatch) {
-                const keyword = trainMatch[1].trim();
-                const meaning = trainMatch[2].trim();
-                knowledgeBase[keyword] = meaning; // 知識ベースに追加
-                saveKnowledge(); // 学習したら保存！
-                addMessage('ai', `「**${keyword}**」は「**${meaning}**」として覚えたよ！ありがとう！`, true);
+                const newKeyword = trainMatch[1].trim();
+                const relatedKeyword = trainMatch[2].trim();
+
+                // 関連するキーワードが知識ベースに存在するか確認
+                if (knowledgeBase[relatedKeyword]) {
+                    knowledgeBase[newKeyword] = knowledgeBase[relatedKeyword]; // 関連するキーワードの意味を新しいキーワードに紐付ける
+                    saveKnowledge(); // 学習したら保存！
+                    addMessage('ai', `「**${newKeyword}**」は「**${relatedKeyword}**」と同じ意味として覚えたよ！これで推測がもっと正確になるはず。`, true);
+                } else {
+                    addMessage('ai', `ごめんね、「**${relatedKeyword}**」についてはまだ知らないみたい。先に「${relatedKeyword} とは [意味]」のように教えてくれると助かるな。`, true);
+                }
                 return null; // AIからの即時応答はなし
             }
 
-            // 知識ベースから応答を探す
+            // --- 2. 直接一致する知識があるかチェック ---
             for (const key in knowledgeBase) {
-                if (lowerCaseMessage.includes(key)) {
+                if (lowerCaseMessage.includes(key.toLowerCase())) {
                     return knowledgeBase[key];
                 }
             }
 
-            // 知らない場合
-            return "ごめんなさい、よく分かりません。もしよければ「**[その言葉] とは [意味]**」と教えてくれると覚えるよ！";
+            // --- 3. 推測モード（直接一致しない場合） ---
+            let bestMatchKeyword = null;
+            let minDistance = Infinity; // 最小レーベンシュタイン距離
+
+            // 入力メッセージを単語に分解して、それぞれの単語で知識ベースを検索
+            const words = lowerCaseMessage.split(/\s+|[、。？！…]+/); // スペースや句読点で分割
+
+            for (const word of words) {
+                if (word.trim() === '') continue; // 空の単語はスキップ
+
+                for (const knownKey in knowledgeBase) {
+                    // 既知のキーワードと入力単語のレーベンシュタイン距離を計算
+                    const distance = levenshteinDistance(word, knownKey.toLowerCase());
+
+                    // ある程度の近さ（閾値）を設定。今回は単語の長さの半分以下を目安に。
+                    // 例: 5文字の単語なら2文字以下の違い
+                    if (distance <= Math.ceil(knownKey.length / 2) && distance < minDistance) {
+                        minDistance = distance;
+                        bestMatchKeyword = knownKey;
+                    }
+                }
+            }
+
+            if (bestMatchKeyword) {
+                // 推測したキーワードの応答を返す
+                const response = knowledgeBase[bestMatchKeyword];
+                return `んー、もしかして「${bestMatchKeyword}」のことかな？\nそれなら、「${response}」だよ。`;
+            } else {
+                // 全く推測できない場合
+                return "ごめんなさい、よく分かりません。新しいキーワードを教えてくれると、もっと賢くなれるよ！「**[言葉] は [関連する言葉] と同じ**」のように教えてくれると、より正確に推測できるようになるよ！";
+            }
         }
 
         // 送信ボタンが押されたときの処理
         function sendMessage() {
-            const message = userInput.value.trim(); // 前後の空白を削除
-            if (message === '') return; // メッセージが空の場合は何もしない
+            const message = userInput.value.trim();
+            if (message === '') return;
 
-            addMessage('user', message); // ユーザーメッセージをチャットボックスに追加
-            userInput.value = ''; // 入力欄をクリア
+            addMessage('user', message);
+            userInput.value = '';
 
-            // AIの応答を少し遅らせて自然に見せる
             setTimeout(() => {
                 const aiResponse = generateResponse(message);
-                if (aiResponse) { // 学習モードでなければ応答
-                    addMessage('ai', aiResponse); // AIのメッセージをチャットボックスに追加
+                if (aiResponse) {
+                    addMessage('ai', aiResponse);
                 }
-            }, 500); // 0.5秒後に応答
+            }, 500);
         }
 
         // Enterキーで送信できるようにする
